# opengl

./: .gitmodules  CMakeLists.txt  README.md
shaders/: default.frag  default.vert  depth.frag  depth.geom  depth.vert  pbr.frag  pbr.vert
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp
src/gl/: check.cpp  check.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h
